// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer audioOutputPreferences/setActiveOutputNotificationDevices sets new active notification device 1`] = `
Object {
  "activeOutputNotificationDevices": Array [
    "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
  ],
  "activeOutputRingtoneDevices": Array [
    "default",
  ],
  "activeOutputSpeakerDevices": Array [
    "default",
  ],
  "availableOutputDevices": Array [],
  "isOutputSelectionSupported": false,
}
`;

exports[`reducer audioOutputPreferences/setActiveOutputRingtoneDevices sets new active ringtone devices 1`] = `
Object {
  "activeOutputNotificationDevices": Array [
    "default",
  ],
  "activeOutputRingtoneDevices": Array [
    "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
  ],
  "activeOutputSpeakerDevices": Array [
    "default",
  ],
  "availableOutputDevices": Array [],
  "isOutputSelectionSupported": false,
}
`;

exports[`reducer audioOutputPreferences/setActiveOutputSpeakerDevices sets new active speaker devices 1`] = `
Object {
  "activeOutputNotificationDevices": Array [
    "default",
  ],
  "activeOutputRingtoneDevices": Array [
    "default",
  ],
  "activeOutputSpeakerDevices": Array [
    undefined,
  ],
  "availableOutputDevices": Array [],
  "isOutputSelectionSupported": false,
}
`;

exports[`reducer audioOutputPreferences/setAvailableOutputDevices sets new available output devices 1`] = `
Object {
  "activeOutputNotificationDevices": Array [
    "default",
  ],
  "activeOutputRingtoneDevices": Array [
    "default",
  ],
  "activeOutputSpeakerDevices": Array [
    "default",
  ],
  "availableOutputDevices": Array [
    Object {
      "id": "default",
      "label": "Default",
    },
    Object {
      "id": "aead4bb457d9b0aeeddb669d8e6fef68d9cf2379d25264d6948af1dbdea3259b",
      "label": "Built-in Audio Analog Stereo",
    },
    Object {
      "id": "6d4096a33f2ba164d976a9929c3936b2956644e0581085c8870c4272782db9fb",
      "label": "Plantronics C320 Analog Stereo",
    },
    Object {
      "id": "807fbf9ab5fd57290d125721e10edaab372b2c52569513de20934e0a14971957",
      "label": "USG PnIXAu20o  Analog Stereo",
    },
  ],
  "isOutputSelectionSupported": false,
}
`;

exports[`reducer audioOutputPreferences/setOutputSelectionSupported sets bool value to support feature control variable  1`] = `
Object {
  "activeOutputNotificationDevices": Array [
    "default",
  ],
  "activeOutputRingtoneDevices": Array [
    "default",
  ],
  "activeOutputSpeakerDevices": Array [
    "default",
  ],
  "availableOutputDevices": Array [],
  "isOutputSelectionSupported": true,
}
`;

exports[`reducer sets the correct initial state 1`] = `
Object {
  "activeOutputNotificationDevices": Array [
    "default",
  ],
  "activeOutputRingtoneDevices": Array [
    "default",
  ],
  "activeOutputSpeakerDevices": Array [
    "default",
  ],
  "availableOutputDevices": Array [],
  "isOutputSelectionSupported": false,
}
`;
